--- a/index.html
+++ b/index.html
@@ -82,38 +82,38 @@
   <section>
     <h2>Nosso Amor em Fotos</h2>
     <div class="galeria">
-      <img src="IMG_20241231_224242.jpg" alt="Foto 1">
-      <img src="IMG_20241231_181418.jpg" alt="Foto 2">
-      <img src="IMG_20241228_190005.jpg" alt="Foto 3">
-      <img src="IMG_20241222_163417.jpg" alt="Foto 4">
-      <img src="IMG_20241220_224604.jpg" alt="Foto 5">
-      <img src="IMG_20241220_193206.jpg" alt="Foto 6">
-      <img src="1723237855771_qsypzi_2_0.jpg" alt="Foto 7">
-      <img src="IMG_20240615_213521.jpg" alt="Foto 8">
-      <img src="IMG_20240615_210710.jpg" alt="Foto 9">
-      <img src="IMG_20240608_125620.jpg" alt="Foto 10">
+      <img src="021124ba-3779-4f31-90bc-2755bb419c47.jpg" alt="Foto 1">
+      <img src="18bb02a3-8e53-4543-9097-4c705f6b6a28.jpg" alt="Foto 2">
+      <img src="43a61549-d649-4d55-a356-dd6be2619fb2.jpg" alt="Foto 3">
+      <img src="49283a7b-bcea-4db9-92ac-1c4429a3621d.jpg" alt="Foto 4">
+      <img src="4b57ef15-75c5-4775-892e-04dad75f66f5.jpg" alt="Foto 5">
+      <img src="4ecf46ef-d356-4418-b5c5-2ba783e9d208.jpg" alt="Foto 6">
+      <img src="7696e164-242c-4ec1-9f3a-366d37930bf4.jpg" alt="Foto 7">
+      <img src="7ae5f90c-e79d-487b-8d4d-e6e7ee548f0d.jpg" alt="Foto 8">
+      <img src="e29b4e50-9bc1-4d2d-89c8-b0296600cb6e.jpg" alt="Foto 9">
+      <img src="f5f2e450-f907-4506-9141-9bcac309320c.jpg" alt="Foto 10">
     </div>
 
     <div class="carta">
-      <h2>Carta para você, Japita</h2>
-      <p>Hoje celebramos um ano do nosso amor, e não há palavras que consigam expressar tudo o que sinto por você. Desde o primeiro momento, sua presença iluminou minha vida de uma forma única. Seu sorriso, seu carinho, sua voz… tudo em você me encanta e me completa.</p>
-      <p>Mesmo com a distância, você sempre esteve perto do meu coração. Cada mensagem, cada ligação, cada lembrança que criamos juntos, me dá forças para continuar acreditando que o amor verdadeiro existe — e ele está em nós.</p>
-      <p>Obrigado por me fazer sonhar de novo, por me acolher com tanto amor, por ser minha parceira, amiga e namorada incrível. Eu prometo continuar cuidando de você, respeitando seu tempo, seus sonhos e construindo um futuro lindo ao seu lado.</p>
-      <p>Te amo, minha Lady in Red. Feliz 1 ano de nós. 💖</p>
-      <p>Com amor, Wesley.</p>
+      <h2>Para minha Japita, com amor.</h2>
+      <p>Há exatamente um ano, Deus me deu um presente que transformou minha vida: você. Mesmo com a distância, cada conversa, cada risada, cada silêncio compartilhado foi um passo firme no caminho que estamos construindo.</p>
+      <p>Você é a paz no meio dos meus dias corridos, o abraço que falta no fim da noite, o sorriso que aquece qualquer tela.</p>
+      <p>Se eu pudesse estar aí agora, te daria um abraço longo, daqueles que dizem tudo sem precisar de palavras. Mas até esse momento chegar, deixo aqui este presente com tudo que carrego no coração.</p>
+      <p>Obrigado por me escolher, por me amar e por ser essa mulher incrível. 💖</p>
+      <p>Com amor, Wes hahaha.</p>
     </div>
 
     <div class="linha-do-tempo">
       <h2>Linha do Tempo</h2>
       <div class="evento"><strong>09/06/2024:</strong> Começamos nosso namoro 💑</div>
-      <div class="evento"><strong>Julho 2024:</strong> Nossa primeira chamada de vídeo longa, madrugada inteira juntos 📱</div>
-      <div class="evento"><strong>Agosto 2024:</strong> Primeira surpresa com docinhos 🧁</div>
-      <div class="evento"><strong>Dezembro 2024:</strong> Nosso primeiro Natal juntos 🎄</div>
+      <div class="evento"><strong>Julho 2024:</strong> Nossa primeiro mês distantes :( 📱</div>
+      <div class="evento"><strong>Setembro 2024:</strong> Fim do período de experiência hahaha 🧁</div>
+      <div class="evento"><strong>Dezembro 2024:</strong> Nosso primeiro Natal e ano novo juntos 🎄</div>
       <div class="evento"><strong>Junho 2025:</strong> Celebramos 1 ano de muito amor ❤️</div>
     </div>
 
     <audio controls autoplay loop>
-      <source src="lady_in_red.mp3" type="audio/mpeg">
+      <source src="whatsapp audio 2025-06-07 at 23.02.59.mpeg" type="audio/mpeg">
       Seu navegador não suporta o áudio.
     </audio>
   </section>
