--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     </div>
 
     <audio controls autoplay loop>
-      <source src="whatsapp audio 2025-06-07 at 23.02.59.mpeg" type="audio/mpeg">
-      Seu navegador não suporta o áudio.
+      <source src="lady_in_red.mp3" type="audio/mpeg">
+    
     </audio>
   </section>
 
